[package]
name = "datascience-dsl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
pest = "2.8.1"
pest_derive = "2.8.1"
polars = { version = "0.50.0", features = ["csv", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
